1998-09-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm +createBegin:]): 
	Use YES in argument to setHideResult.
	([HeatbugObserverSwarm -_update_]): Show use of widget snapshots.

1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Use initSwarmApp instead of initSwarm.  Specify
	version 1.3 and bug-swarm@santafe.edu.

1998-08-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm -_update_]): 
	Use setWidget: instead of create:widget:.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm -_update_]): 
	Write screenshots if SCREENSHOTS is defined.

	* README: Note SCREENSHOTS compile-time option.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (DATAFILES): Add {batch,experiment}.setup.

	* HeatbugBatchSwarm.m ([HeatbugBatchSwarm -buildObjects]): 
	Use ObjectLoader's fromAppDataFileNamed: instead of fromfileNamed:.

	* Makefile (APPLIBS): Remove.
	(DATAFILES): For ant.png.
	(SWARMHOME): Bump default to 1998-08-20.

	* Heatbug.m ([Heatbug -_getPixmap_:]): Set directory using
	application config path.
	
1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile: Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Bump default to 1.2.

1998-07-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* README: Note -DUSE_PIXMAP.  Remove text about replacement files.

1998-06-23  Alex Lancaster <alex@santafe.edu>

	* COPYING, README:  New files, replacements for LICENCE and READ.ME, 
	respectively.

1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugModelSwarm.h (Swarm): 

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HeatbugObserverSwarm.h (HeatbugObserverSwarm): Instead of being
	statically typed, unhappyGraph conform to EZGraph protocol (in